fix: measures for selection overlays parent visibility toggles (CODAP-800) (#2185)
* fix: Measures for Selection overlays Parent Visibility Toggles (CODAP-800)

[CODAP-800](https://concord-consortium.atlassian.net/browse/CODAP-800)

--- a/v3/src/components/graph/adornments/components/adornments.scss
+++ b/v3/src/components/graph/adornments/components/adornments.scss
@@ -34,6 +34,11 @@
   position: absolute;
   top: 0;
   width: 100%;
+
+  &.with-parent-toggles {
+    height: calc(100% - 20px);
+    top: 20px;
+  }
 }
 
 .adornment-spanner {
